# homelab-report

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
config/: loader.py  schema.py
src/: main.py
src/api/: adguard.py  bazarr.py  gluetun.py  jellyfin.py  jellyseerr.py  lidarr.py  portainer.py  prowlarr.py  proxmox.py  qbittorrent.py  radarr.py  slskd.py  sonarr.py  speedtest_tracker.py
src/app/: utils.py
src/config/: config.yaml  example_config.yaml  loader.py  schema.py
src/email/: sender.py  template.html
src/jobs/: daily_email.py
