[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "homelab-report"
version = "0.1.0"
description = "Daily status report emailer for a homelab."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{ name = "Noah Bamberger" }]

dependencies = [
  # config & validation
  "PyYAML>=6.0.1",
  "pydantic[email]>=2.7",
  # http clients
  "httpx>=0.27",
  # scheduling
  "APScheduler>=3.10",
  # email templating
  "Jinja2>=3.1",
  # logging
  "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "types-PyYAML>=6.0.12.20240808",
]

[project.scripts]
homelab-report = "your_app.jobs.daily_email:main"

[tool.hatch.build]
packages = [{ include = "your_app", from = "src" }]

# -------------------------
# Ruff (lint/format hints)
# -------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["I"] # isort
ignore = [
  "E203", # space before :
]
[tool.ruff.lint.isort]
known-first-party = ["your_app"]
combine-as-imports = true

# -------------------------
# Mypy (type checking)
# -------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true
exclude = ["tests/fixtures/"]

# -------------------------
# Pytest
# -------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]