[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "homelab-report"
version = "1.0.0"
description = "Automated scheduled status report emails for self hosted services"
authors = [
  { name = "Noah Bamberger"},
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GNU GPLv3" }

dependencies = [
    "httpx",
    "python-dotenv",
    "jinja2",
    "python-dateutil",
    "PyYAML"
]

[tool.setuptools]
packages = ["src", "config"]